{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 65,
  "lineage": "4611325a-e685-768d-6e32-adc331560a91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ns_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0871b7e0b83ae16c4",
            "arn": "arn:aws:ec2:us-east-1:616613574518:instance/i-0cd89179cfbc9a1ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd89179cfbc9a1ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-021a664ddd73610c0",
            "private_dns": "ip-10-0-1-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-54-235-47-16.compute-1.amazonaws.com",
            "public_ip": "54.235.47.16",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05979897f744d337f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08160afeae46e8ef0",
            "tags": {
              "CreatedDate": "07-19-2025",
              "Name": "nixaclabs-functions-07-19-ServerInstance1",
              "Project": "NixacLabs-Functions"
            },
            "tags_all": {
              "CreatedDate": "07-19-2025",
              "Name": "nixaclabs-functions-07-19-ServerInstance1",
              "Project": "NixacLabs-Functions"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c8e6d6602e7fb06"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0871b7e0b83ae16c4",
            "arn": "arn:aws:ec2:us-east-1:616613574518:instance/i-028fbb38209b8ba6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028fbb38209b8ba6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4edbe029b71cd25",
            "private_dns": "ip-10-0-2-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.27",
            "public_dns": "ec2-98-85-222-22.compute-1.amazonaws.com",
            "public_ip": "98.85.222.22",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c84a31abaf5b2547",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049324a15f414fbda",
            "tags": {
              "CreatedDate": "07-19-2025",
              "Name": "nixaclabs-functions-07-19-ServerInstance2",
              "Project": "NixacLabs-Functions"
            },
            "tags_all": {
              "CreatedDate": "07-19-2025",
              "Name": "nixaclabs-functions-07-19-ServerInstance2",
              "Project": "NixacLabs-Functions"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c8e6d6602e7fb06"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0871b7e0b83ae16c4",
            "arn": "arn:aws:ec2:us-east-1:616613574518:instance/i-0b89b3ddd8596d85d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b89b3ddd8596d85d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01cb785b68ccbab5e",
            "private_dns": "ip-10-0-3-61.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.61",
            "public_dns": "ec2-44-202-189-138.compute-1.amazonaws.com",
            "public_ip": "44.202.189.138",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf5f8b4c4a32f3f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f1e7770eee21b10d",
            "tags": {
              "CreatedDate": "07-19-2025",
              "Name": "nixaclabs-functions-07-19-ServerInstance3",
              "Project": "NixacLabs-Functions"
            },
            "tags_all": {
              "CreatedDate": "07-19-2025",
              "Name": "nixaclabs-functions-07-19-ServerInstance3",
              "Project": "NixacLabs-Functions"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c8e6d6602e7fb06"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ns_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:internet-gateway/igw-0b8c36ce9b468f711",
            "id": "igw-0b8c36ce9b468f711",
            "owner_id": "616613574518",
            "region": "us-east-1",
            "tags": {
              "Name": "NixacLabs-IGW"
            },
            "tags_all": {
              "Name": "NixacLabs-IGW"
            },
            "vpc_id": "vpc-02cf2c3b51f2f96fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ns_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/90e7b6b027b5770a",
            "arn_suffix": "app/ns-lb/90e7b6b027b5770a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ns-lb-1799261353.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/90e7b6b027b5770a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ns-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0dc73fa1c4c0f25aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049324a15f414fbda"
              },
              {
                "subnet_id": "subnet-08160afeae46e8ef0"
              },
              {
                "subnet_id": "subnet-0f1e7770eee21b10d"
              }
            ],
            "subnets": [
              "subnet-049324a15f414fbda",
              "subnet-08160afeae46e8ef0",
              "subnet-0f1e7770eee21b10d"
            ],
            "tags": {
              "Name": "Nixaclabs-LoadBalancer"
            },
            "tags_all": {
              "Name": "Nixaclabs-LoadBalancer"
            },
            "vpc_id": "vpc-02cf2c3b51f2f96fc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/90e7b6b027b5770a"
          },
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ns_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:listener/app/ns-lb/90e7b6b027b5770a/803c0341179503a8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:listener/app/ns-lb/90e7b6b027b5770a/803c0341179503a8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/90e7b6b027b5770a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.ns_lb",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_security_group.ns_lb_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ns_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4",
            "arn_suffix": "targetgroup/ns-lb-target-group/80bed499cda233b4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ns-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "NS-LB-Target-Group"
            },
            "tags_all": {
              "Name": "NS-LB-Target-Group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02cf2c3b51f2f96fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ns_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4-20250719143116561300000006",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4",
            "target_id": "i-0cd89179cfbc9a1ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ns_instance",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4-20250719143116373800000005",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4",
            "target_id": "i-028fbb38209b8ba6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ns_instance",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4-20250719143116597200000007",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/80bed499cda233b4",
            "target_id": "i-0b89b3ddd8596d85d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ns_instance",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ns_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:route-table/rtb-058ec54b31f1b1c98",
            "id": "rtb-058ec54b31f1b1c98",
            "owner_id": "616613574518",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8c36ce9b468f711",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02cf2c3b51f2f96fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0605d05f2f01a3541",
            "region": "us-east-1",
            "route_table_id": "rtb-058ec54b31f1b1c98",
            "subnet_id": "subnet-08160afeae46e8ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_route_table.ns_public_route_table",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046d78ec61f015bc9",
            "region": "us-east-1",
            "route_table_id": "rtb-058ec54b31f1b1c98",
            "subnet_id": "subnet-049324a15f414fbda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_route_table.ns_public_route_table",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aff259d62fa95dd0",
            "region": "us-east-1",
            "route_table_id": "rtb-058ec54b31f1b1c98",
            "subnet_id": "subnet-0f1e7770eee21b10d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_route_table.ns_public_route_table",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ns_lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:security-group/sg-0dc73fa1c4c0f25aa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc73fa1c4c0f25aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ns_lb_security_group",
            "name_prefix": "",
            "owner_id": "616613574518",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "NixacLabs-LB-Security-Group"
            },
            "tags_all": {
              "name": "NixacLabs-LB-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cf2c3b51f2f96fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ns_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:security-group/sg-06c8e6d6602e7fb06",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c8e6d6602e7fb06",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc73fa1c4c0f25aa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ns_public_security_group",
            "name_prefix": "",
            "owner_id": "616613574518",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02cf2c3b51f2f96fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ns_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-08160afeae46e8ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08160afeae46e8ef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "NixacLabs-PublicSubnet-subnet1"
            },
            "tags_all": {
              "Name": "NixacLabs-PublicSubnet-subnet1"
            },
            "vpc_id": "vpc-02cf2c3b51f2f96fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-049324a15f414fbda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049324a15f414fbda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "NixacLabs-PublicSubnet-subnet2"
            },
            "tags_all": {
              "Name": "NixacLabs-PublicSubnet-subnet2"
            },
            "vpc_id": "vpc-02cf2c3b51f2f96fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-0f1e7770eee21b10d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1e7770eee21b10d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "NixacLabs-PublicSubnet-subnet3"
            },
            "tags_all": {
              "Name": "NixacLabs-PublicSubnet-subnet3"
            },
            "vpc_id": "vpc-02cf2c3b51f2f96fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ns_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:vpc/vpc-02cf2c3b51f2f96fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-040eb390a5251f9cc",
            "default_route_table_id": "rtb-0d2eb5ca2d4755bf7",
            "default_security_group_id": "sg-000c8ca01e2dd82b3",
            "dhcp_options_id": "dopt-04570ddac239d7c3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cf2c3b51f2f96fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2eb5ca2d4755bf7",
            "owner_id": "616613574518",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}